--- a/DL4H_Team_82.ipynb
+++ b/DL4H_Team_82.ipynb
@@ -19,7 +19,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The link to our github repo which contains the .ipynb and other supplemental code: https://github.com/Ponyokatsu/cs598DLH-tpc-LoS/tree/main"
+        "The link to our github repo which contains the .ipynb and other supplemental code: https://github.com/Ponyokatsu/cs598DLH-tpc-LoS/tree/main\n",
+        "\n",
+        "PRESENTATION: https://drive.google.com/file/d/1fJOOZ04NRnogvkjfTt-AM5MCxTDV2tbz/view?usp=sharing"
       ],
       "metadata": {
         "id": "2CXuKhoDF8-i"
@@ -62,7 +64,7 @@
       "cell_type": "markdown",
       "source": [
         "# Introduction\n",
-        "PRESENTATION: https://drive.google.com/file/d/1fJOOZ04NRnogvkjfTt-AM5MCxTDV2tbz/view?usp=sharing\n",
+        "\n",
         "*   Background of the problem\n",
         "  <!-- * what type of problem: disease/readmission/mortality prediction,  feature engineeing, data processing, etc\n",
         "  * what is the importance/meaning of solving the problem\n",
@@ -6312,36 +6314,22 @@
     {
       "cell_type": "code",
       "source": [
-<<<<<<< HEAD
         "!python -m models.run_tpc_MT_notebook --sample 1\n",
-=======
-        "!python -m models.run_tpc_MT_notebook --sample 0\n",
->>>>>>> acb0e998aa561557a3cbc2df670d95827192e80c
         "# this command runs the multitask TPC model on one sample\n",
         "# output includes:\n",
         "# length of stay prediction at regular timesteps and the true remaining length of stay\n",
         "# mortality prediction\n",
-<<<<<<< HEAD
         "# can run with samples 0 through 7 inclusive\n",
         "# data can be found here and inserted into the correct path for MIMIC set up in data section: https://drive.google.com/drive/folders/1gYNVV4Jf1kPmZuFBt-LlTl--jpT7ty29?usp=sharing"
-=======
-        "# can run with samples 0 through 7 inclusive"
->>>>>>> acb0e998aa561557a3cbc2df670d95827192e80c
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m2Rl5g7mtj1u",
-<<<<<<< HEAD
         "outputId": "1b28a852-29ff-4340-8962-9ed17ee898a2"
       },
-      "execution_count": 4,
-=======
-        "outputId": "f1700170-3d73-42aa-dcb5-1b2996940bfa"
-      },
       "execution_count": null,
->>>>>>> acb0e998aa561557a3cbc2df670d95827192e80c
       "outputs": [
         {
           "output_type": "stream",
@@ -6351,7 +6339,6 @@
             "Start test.\n",
             "Test Metrics:\n",
             "LoS prediction : ground truth\n",
-<<<<<<< HEAD
             "0.6932563781738281 : 12.125115394592285\n",
             "7.653637886047363 : 11.29178237915039\n",
             "3.9318511486053467 : 10.45844841003418\n",
@@ -6366,22 +6353,6 @@
             "Mortality prediction : ground truth\n",
             "0.0011314022121950984 : 0.0\n",
             "Test Loss: 330.6637\n",
-=======
-            "0.6932560205459595 : 8.74196720123291\n",
-            "7.653641223907471 : 7.908633708953857\n",
-            "3.931847333908081 : 7.075300693511963\n",
-            "4.690090656280518 : 6.24196720123291\n",
-            "4.500667572021484 : 5.408634185791016\n",
-            "15.034602165222168 : 4.575300693511963\n",
-            "11.856452941894531 : 3.74196720123291\n",
-            "5.571021556854248 : 2.9086337089538574\n",
-            "5.239928722381592 : 2.075300693511963\n",
-            "5.550999164581299 : 1.2419672012329102\n",
-            "0.2257564663887024 : 0.4086341857910156\n",
-            "Mortality prediction : ground truth\n",
-            "0.0011313995346426964 : 0.0\n",
-            "Test Loss: 215.6968\n",
->>>>>>> acb0e998aa561557a3cbc2df670d95827192e80c
             "Testing ended. Results stored =)\n",
             "Testing complete.\n"
           ]
